# EmergingTrends

blog1/: topic_selection_Fang.docx
blog1/demo/: .ycm_extra_conf.py  CMakeLists.txt  HourItem.cpp  HourItem.h  WeatherManager.cpp  WeatherManager.h  WeatherManagerCallbacks.h  WorkerThread.cpp  WorkerThread.h  mainwindow.cpp  mainwindow.h  sample.json
blog1/demo/demo/: CMakeLists.txt
blog2/src/demo/abstract_factory/: AbstractFactoryTest.java  Brush.java  GraphicsContext.java  GraphicsFactory.java  Image.java  Pen.java  WBrush.java  WGraphicsContext.java  WGraphicsFactory.java  WImage.java  WPen.java  XBrush.java  XGraphicsContext.java  XGraphicsFactory.java  XImage.java  XPen.java
blog2/src/demo/decorator/: DecoratorTest.java  INewsPaper.java  NewsPaper.java  NewsPaperWithFooter.java  NewsPaperWithHeader.java
blog2/src/demo/factory_method/: Car.java  CarFactory.java  FactoryMethodTest.java  Ford.java  MercedesBenz.java  Toyota.java
blog2/src/demo/singleton/: Singleton1.java  Singleton1_1.java  Singleton1_2.java  Singleton1_3.java  Singleton1_4.java  SingletonTest.java
